# threat-research-assistant

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yml  quality.yml  release.yml
lambda/ingestion/: Dockerfile  handler.py
